--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "3"
 services:
   nginx:
-    build: ./project/nginx
+    image: nginx
     ports:
-      - "82:80"
+      - "80:80"
     volumes:
       - ./project/html:/var/www/html
+      - ./project/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./project/nginx/conf/conf.d:/etc/nginx/conf.d
+      
   php:
     image: php:7.0-fpm
     container_name: php-container
