--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MYSQL_ROOT_PASSWORD=example
+PMA_ARBITRARY=1
+FLASK_APP=project/__init__.py
+FLASK_DEBUG=1
+PYTHONDONTWRITEBYTECODE=1
+PYTHONUNBUFFERED=1
